@@ -23,6 +23,7 @@ lib/App/Doh/Model/Administration.pm
 lib/App/Doh/Model/Documentation.pm
 lib/App/Doh/Model/Help.pm
 lib/App/Doh/Model/Posts.pm
+lib/App/Doh/Model/User.pm
 lib/App/Doh/Request.pm
 lib/App/Doh/Role/Authorization.pm
 lib/App/Doh/Role/CommonLinks.pm
@@ -35,7 +36,6 @@ lib/App/Doh/Role/Preferences.pm
 lib/App/Doh/Role/Templates.pm
 lib/App/Doh/Server.pm
 lib/App/Doh/Session.pm
-lib/App/Doh/User.pm
 lib/App/Doh/View/HTML.pm
 lib/App/Doh/View/HTML/Markdown.pm
 lib/App/Doh/View/HTML/Pod.pm
